tdf#90991: sw: fix style preview creating undo objects

SwDocStyleSheet::FillStyleSheet() already takes care to remove all
temporarily created styles, so assume that works and suppress the
creation of user-visible Undo objects.

Change-Id: I748f0e8304c42e767b331ebd22be0290b9c0d89d