sw/source/uibase/app/docstyle.cxx
@@ -1777,6 +1777,9 @@ bool SwDocStyleSheet::FillStyleSheet(
         bPhysical = 0 != pCharFormat;
         if( bFillOnlyInfo && !bPhysical )
         {
+            // create style (plus all needed parents) and clean it up
+            // later - without affecting the undo/redo stack
+            ::sw::UndoGuard const ug(rDoc.GetIDocumentUndoRedo());
             bDeleteInfo = true;
             ::lcl_SaveStyles( static_cast< sal_uInt16 >(nFamily), aDelArr, rDoc );
             pCharFormat = lcl_FindCharFormat(rDoc, aName, this );
@@ -1804,6 +1807,7 @@ bool SwDocStyleSheet::FillStyleSheet(
             bPhysical = 0 != pColl;
             if( bFillOnlyInfo && !bPhysical )
             {
+                ::sw::UndoGuard const ug(rDoc.GetIDocumentUndoRedo());
                 bDeleteInfo = true;
                 ::lcl_SaveStyles( static_cast< sal_uInt16 >(nFamily), aDelArr, rDoc );
                 pColl = lcl_FindParaFormat(rDoc, aName, this );
@@ -1827,6 +1831,7 @@ bool SwDocStyleSheet::FillStyleSheet(
         bPhysical = 0 != pFrameFormat;
         if (bFillOnlyInfo && !bPhysical)
         {
+            ::sw::UndoGuard const ug(rDoc.GetIDocumentUndoRedo());
             bDeleteInfo = true;
             ::lcl_SaveStyles( static_cast< sal_uInt16 >(nFamily), aDelArr, rDoc );
             pFrameFormat = lcl_FindFrameFormat(rDoc, aName, this );
@@ -1846,6 +1851,7 @@ bool SwDocStyleSheet::FillStyleSheet(
         bPhysical = 0 != pDesc;
         if( bFillOnlyInfo && !pDesc )
         {
+            ::sw::UndoGuard const ug(rDoc.GetIDocumentUndoRedo());
             bDeleteInfo = true;
             ::lcl_SaveStyles( static_cast< sal_uInt16 >(nFamily), aDelArr, rDoc );
             pDesc = lcl_FindPageDesc( rDoc, aName, this );
@@ -1874,6 +1880,7 @@ bool SwDocStyleSheet::FillStyleSheet(
         bPhysical = 0 != pNumRule;
         if( bFillOnlyInfo && !pNumRule )
         {
+            ::sw::UndoGuard const ug(rDoc.GetIDocumentUndoRedo());
             bDeleteInfo = true;
             ::lcl_SaveStyles( static_cast< sal_uInt16 >(nFamily), aDelArr, rDoc );
             pNumRule = lcl_FindNumRule( rDoc, aName, this );
@@ -1946,7 +1953,10 @@ bool SwDocStyleSheet::FillStyleSheet(
         SetMask( _nMask );
     }
     if( bDeleteInfo && bFillOnlyInfo )
+    {
+        ::sw::UndoGuard const ug(rDoc.GetIDocumentUndoRedo());
         ::lcl_DeleteInfoStyles( static_cast< sal_uInt16 >(nFamily), aDelArr, rDoc );
+    }
     return bRet;
 }
 
